--- a/ms-customers/package.json
+++ b/ms-customers/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "test": "jest",
     "debug": "node --inspect=0.0.0.0:9229 src/server.js",
     "test:coverage": "nyc --reporter=lcov --reporter=text mocha --recursive"
   },
@@ -16,12 +17,14 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-validator": "^6.15.0",
+    "jq": "^1.7.2",
     "morgan": "^1.10.1",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10"
   }
 }
